chore: updating the readme file, project name and other texts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsgoogletexttospeech",
+  "name": "jstexttospeechstudies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
